agregué una gran cantidad de formularios y ejercicios

--- a/index.html
+++ b/index.html
@@ -8,7 +8,80 @@
 <body>
 
     <h1> Me falta el aire </h1>
-    <h2> Esto es un comentario</h2>
+    <h2> Y el corazón tucun tucun</h2>
+
+    <H2>Lista Ordenada </H2>
+    <ol>
+<li> Elemento A</li>
+<li> Elemento B</li>
+<li> Elemento C</li>
+    </ol>
+
+
+    <H3>Lista Ordenada </H3>
+    <ul>
+<li> Elemento A</li>
+<li> Elemento B</li>
+<li> Elemento C</li>
+    </ul>
     
+
+<h2>Selecciona un color</h2>
+
+<select name="color">
+    <option value="rojo">Rojo</option>
+    <option value="verde">Verde</option>
+    <option value="azul">Azul</option>
+    <option value= "amarillo">Amarillo</option>
+</select>
+
+<br>
+<br>
+
+<input type="checkbox" id="preferencia1" name="preferencia1" value="preferencia1">
+<label for ="preferencial">Preferencia 1</label>
+
+<input type="checkbox" id="preferencia2" name="preferencia2" value="preferencia2">
+<label for ="preferencia2">Preferencia 2</label>
+
+<input type="checkbox" id="preferencia3" name="preferencia3" value="preferencia3">
+<label for ="preferencia3">Preferencia 3</label>
+
+<br>
+<br>
+<br>
+
+<input type="radio" id="masculino" name="genero" value="masculino">
+<label for ="masculino">Masculino</label>
+
+<input type="radio" id="femenino" name="genero" value="femenino">
+<label for ="femenino">Femenino</label>
+
+
+<input type="radio" id="otro" name="genero" value="otro">
+<label for ="otro">Otro</label>
+
+
+<h2>Formulario de comentarios</h2>
+
+<form>
+ 
+ <label >Nombre:</label><br>
+ <input type="text" id ="nombre" name="nombre"Required><br><br>
+
+ <label >Comentarios</label>
+ <textarea id="comentario" name="comentario"></textarea><br><br>
+
+ <input type="submit" value="Enviar">
+
+</form>
+
+<table border="1">
+
+
+
+</table>
+
+
 </body>
 </html>
